--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolioaprcg?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/rcg?useSSL=false&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=Optimus1
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
