--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://uqx7fly9jenfndpn:mxrm9bIxitwRa66R6qT5@b3eti1zgoxl1aamj23ds-mysql.services.clever-cloud.com:3306/b3eti1zgoxl1aamj23ds
-spring.datasource.username=uqx7fly9jenfndpn
-spring.datasource.password=mxrm9bIxitwRa66R6qT5
+spring.datasource.url=jdbc:mysql:containers-us-west-121.railway.app
+spring.datasource.username=root
+spring.datasource.password=silKeyTPcCslAp3Hd16r
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
 jwt.secret = secret
