--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:mysql:containers-us-west-121.railway.app
-spring.datasource.username=root
-spring.datasource.password=silKeyTPcCslAp3Hd16r
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/portfolioaprcg?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Optimus1
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
 jwt.secret = secret
